* da wir jetzt mit xindy bauen, können wir auch das Paket makeidx   verwenden und uns den Würgaround für die Korrektur der Boxen sparen
* Jens hatte ja ein Integral mit Pfeil am Kreis gefunden. Ich hab jetzt
  einfach \oint auf dieses umgemünzt und alle Vorkommen von
  \ointclockwise durch \oint ersetzt.

* Dann hab ich mal für die Mitarbeit am Skript die Zeiten erweitert.
  Fabian hat mir gestern auch noch ein paar Tipps gegeben.

* Dieses todo über den Fehler bei der Benennung der Zeilen hatte sich
  mit r15 erledigt.

* ein paar optische Korrekturen

* das Beispiel 10.3.1/5 ausgebaut

* Index um den Hauptteil der Laurentreihe erweitert


git-svn-id: https://svn.lug-jena.de/uni-skripte@282 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -1,14 +1,14 @@
 % Einige zusätzliche Informationen für rubber
 % rubber: clean Fundamental-waerme.pdf $base.thm
 % rubber: watch $base.thm
-% rubber: index.tool xindy
-% rubber: index.language  german-din
-% rubber: index.modules indexstyle.xdy
+% rubber: makeidx.tool xindy
+% rubber: makeidx.language  german-din
+% rubber: makeidx.modules indexstyle.xdy
 
 \documentclass[halfparskip*,german,draft,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{index}
+\usepackage{makeidx}
 \usepackage[final]{graphicx}
 \usepackage{color}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue]{hyperref}
@@ -134,7 +134,7 @@
 \newtheorem{proof}{Beweis:}
 
 % Hier die Definition, wie \autoref die Umgebungen nennen soll, die mit
-% \newtheorem definiert wurden
+% newtheorem definiert wurden
 \newcommand*{\satzautorefname}{Satz}
 \newcommand*{\lemmaautorefname}{Lemma}
 \newcommand*{\bemerkautorefname}{Bemerkung}
@@ -205,6 +205,11 @@
 \renewcommand*{\epsilon}{\varepsilon}
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
+
+% In der Vorlesung war an dem Kurvenintegral ein kleiner Pfeil. Da das
+% Kurvenintegral ohne Pfeil nie genutzt wurde, definieren wir es einfach
+% um.
+\renewcommand*{\oint}{\varointctrclockwise\limits}
 
 % Befehl zur Vergabe von Gleichungsnummern, an Stellen, an denen sonst
 % keine Nummer erstellt werden würde (in gather* z.B.)
@@ -285,10 +290,10 @@
   haben, vielmals danken:
   \begin{itemize}
    \item \href{mailto:joerg@alea.gnuu.de}{Jörg Sommer
-    \texttt{<joerg@alea.gnuu.de>}} (2005)
-   \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel \texttt{jens@kubieziel.de}} (2005)
+    \texttt{<joerg@alea.gnuu.de>}} (2005--2006)
+   \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel \texttt{<jens@kubieziel.de>}} (2005--2006)
    \item Peter Schindler (2005)
-   \item Fabian Stutzki (2005)
+   \item Fabian Stutzki (2005--2006)
   \end{itemize}
 }
 
@@ -1239,8 +1244,7 @@ Sei $B\subset\Omega\subset\R^2, \Omega$ offen, $B$ kompakt, $\vec{v}:
            g_{2}\partial_{v}g_{3} - \partial_{v}g_{2}\partial_{u}g_{3}) +
            \ldots +\ldots
       \end{align*}
-      Dieses stimmt mit dem Ausdruck in \autoref{eq:3} \todo{Fehler in
-      der Benennung} überein.
+      Dieses stimmt mit dem Ausdruck in \autoref{eq:3} überein.
     \end{enumerate}
   \end{proof}
 \end{satz}
@@ -2314,7 +2318,8 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
   Es sei $\phi:\partial K\rightarrow\C$ stetig und es sei
   \begin{gather*}
     u(y) = \frac{1-\abs{y}^{2}}{\abs{\omega_{n}}} \int_{\partial K}
-       \frac{\phi(x)}{\abs{x-y}^{n}}dS(x)\qquad\forall y\in K
+       \frac{\phi(x)}{\abs{x-y}^{n}}dS(x) \makebox[0pt][l]{$\qquad\forall
+       y\in K$}
   \end{gather*}
   Dann gilt:
   \begin{enumerate}
@@ -4562,7 +4567,7 @@ Zu beginn einige Wiederholungen:
   Parameterdarstellung der Kurve: $g(t) = z = z_{0}+R e^{it}$
   $\Rightarrow$ $z-z_{0} = Re^{it}$ mit $t\in[0,2\pi]$.
   \begin{gather*}
-    \int_{\Gamma} (z-z_{0})^{n}\,dz = \ointclockwise_{\abs{z-z_{0}}=R}
+    \int_{\Gamma} (z-z_{0})^{n}\,dz = \oint_{\abs{z-z_{0}}=R}
        (z-z_{0})^{n}\,dz = \int_{0}^{2\pi} R^{n}e^{int} Rie^{it}\,dt =
        iR^{n+1} \int_{0}^{2\pi} e^{i(n+1)t}\,dt =
        \begin{cases}2\pi i& n=-1\\0&n\not=-1\end{cases}
@@ -4992,8 +4997,8 @@ $\int_{\Gamma} f(z)\,dz =0$.
   Es sei $z\in K_{r}(z_{0})$ und $\overline{K_{\delta}(z)}\subset
   K_{r}(z_{0})$. Es sei $h$ holomorph in $G\setminus\{z\}$. $\Rightarrow$
   \begin{gather*}
-    \ointclockwise_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
-       \ointclockwise_{\abs{\zeta-z}=\delta} h(\zeta)\,d\zeta
+    \oint_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
+       \oint_{\abs{\zeta-z}=\delta} h(\zeta)\,d\zeta
   \end{gather*}
 
   \begin{proof}
@@ -5025,7 +5030,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
   $G\subset \C$ offen, $f\colon G\rightarrow\C$ holomorph, $z_{0}\in G$,
   $\overline{K_{r}(z_{0})}\subset G$ ($r>0$). Dann gilt:
   \begin{gather*}
-    f(z) = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
+    f(z) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
        \frac{f(\zeta)}{\zeta-z}\,d\zeta
   \end{gather*}
   für alle $z\in K_{r}(z_{0})$.
@@ -5043,15 +5048,15 @@ $\int_{\Gamma} f(z)\,dz =0$.
     stetig in $\Omega$ und holomorph auf $\Omega\setminus\{z\}$. Nach
     \autoref{fol:2} gilt der Cauchy'sche Integralsatz für $h$ und
     \begin{align*}
-      0 &= \ointclockwise_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
-         \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
-         \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(z)}{\zeta-z}d\zeta\\
-      &= \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
-         f(z)\ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{1}{\zeta-z}d\zeta\\
-      &=\ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
-         f(z)\ointclockwise_{\abs{\zeta-z}=\delta} \frac{d\zeta}{\zeta-z}
+      0 &= \oint_{\abs{\zeta-z_{0}}=r} h(\zeta)\,d\zeta =
+         \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         \oint_{\abs{\zeta-z_{0}}=r} \frac{f(z)}{\zeta-z}d\zeta\\
+      &= \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         f(z)\oint_{\abs{\zeta-z_{0}}=r} \frac{1}{\zeta-z}d\zeta\\
+      &=\oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+         f(z)\oint_{\abs{\zeta-z}=\delta} \frac{d\zeta}{\zeta-z}
          &\text{nach \todo{link: lemma 1}}\\
-      &= \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
+      &= \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta -
          f(z) 2\pi i &\text{nach \todo{link: bsp 10.2.1/4}}
     \end{align*}
   \end{proof}
@@ -5070,7 +5075,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
 \begin{bemerk}
   Für $z=z_{0}$ gilt
   \begin{gather*}
-    f(z_{0}) = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
+    f(z_{0}) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
        \frac{f(\zeta)}{\zeta-z_{0}}d\zeta,\qquad \zeta-z_{0} = re^{it}
   \end{gather*}
   $\Rightarrow$
@@ -5086,9 +5091,9 @@ $\int_{\Gamma} f(z)\,dz =0$.
 \label{lem:1024-5}
   Es sei $z_{0}\in\C, r>0$ und $f$ stetig auf $\partial K_{r}(z_{0}) =
   \{\zeta\colon \abs{\zeta-z_{0}}=r \}$, $H(z) =
-  \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta$ für $z$ mit
+  \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta$ für $z$ mit
   $\abs{z-z_{0}}<r$ $\Rightarrow$ $H(z) = \sum_{k=0}^{\infty} a_{k}
-  (z-z_{0})^{k}$, wobei $a_{k} = \ointclockwise_{\abs{\zeta-z_{0}}=r}
+  (z-z_{0})^{k}$, wobei $a_{k} = \oint_{\abs{\zeta-z_{0}}=r}
   \frac{f(\zeta)}{(\zeta-z_{0})^{k+1}}d\zeta$ absolut konvergent für
   $\abs{z-z_{0}}<r$ und gleichmäßig konvergent auf $\{z\colon
   \abs{z-z_{0}}\leq r_{1}<r\}$
@@ -5115,7 +5120,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
     alle $z\in K_{R}(z_{0})$. Die Koeffizienten $a_{k}$ sind eindeutig
     bestimmt und es gilt:
     \begin{gather*}
-      a_{k} = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
+      a_{k} = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
          \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta =
          \frac{f^{(k)}(z_{0})}{k!}\quad(k\in\N_{0})
     \end{gather*}
@@ -5124,7 +5129,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
     Punkt in $G$ als Potenzreihe darstellbar und diese Potenzreihe ist
     beliebig oft differenzierbar) und es gilt:
     \begin{gather*}
-      f^{(k)}(z) = \frac{k!}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
+      f^{(k)}(z) = \frac{k!}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
          \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta \quad(k\in\N_{0})
     \end{gather*}
     wobei $z_{0}\in G, \overline{K_{r}(z_{0})}\subset G$ und $z\in
@@ -5136,7 +5141,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
     \begin{enumerate}[1.\,Schritt]
      \item (1) $G_{0} = K_{R}(z_{0})$ \todo{Satz 2} $\Rightarrow$
       \begin{gather*}
-        f(z) = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=\rho}
+        f(z) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\rho}
            \frac{(\zeta)}{\zeta-z}d\zeta \quad\text{für } z\in K_{\rho}
            (z_{0}), \rho<R
       \end{gather*}
@@ -5146,9 +5151,9 @@ $\int_{\Gamma} f(z)\,dz =0$.
       \end{gather*}
       wobei
       \begin{gather*}
-        a_{k} = \frac{1}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=\rho}
+        a_{k} = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\rho}
            \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta =^{lemma 1} \frac{1}{2\pi
-           i} \ointclockwise_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta
+           i} \oint_{\abs{\zeta-z_{0}}=r} \frac{f(\zeta)}{\zeta-z}d\zeta
       \end{gather*}
       für $0<r<R$
 
@@ -5159,9 +5164,9 @@ $\int_{\Gamma} f(z)\,dz =0$.
       Es sei $z_{0}\in G, \overline{K_{r}(z_{0})}\subset G$ Aus (1) folgt
       (Entwicklung in $z$)
       \begin{gather*}
-        f^{(k)}(z) = \frac{k!}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=\delta}
+        f^{(k)}(z) = \frac{k!}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\delta}
            \frac{f(\zeta)}{(\zeta-z)^{k+1}}d\zeta =^{Lemma 1}
-           \frac{k!}{2\pi i} \ointclockwise_{\abs{\zeta-z_{0}}=r}
+           \frac{k!}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
            \frac{f(\zeta)}{\zeta-z}d\zeta
       \end{gather*}
     \end{enumerate}
@@ -5224,12 +5229,12 @@ $\int_{\Gamma} f(z)\,dz =0$.
   $G\subset \C$ offen, $f\colon G\rightarrow\C$ stetig. Für jedes
   abgeschlossene Dreieck $\Delta\subset G$ gelt:
   \begin{gather*}
-    \ointclockwise_{\partial\Delta} f\,dz = 0
+    \oint_{\partial\Delta} f\,dz = 0
   \end{gather*}
   Dann ist $f$ holomorph in $G$.
 
   \begin{proof}
-    Es sei $K_{r}(z_{0})\subset G$. Aus $\ointclockwise_{\partial\Delta} f\,dz=0$
+    Es sei $K_{r}(z_{0})\subset G$. Aus $\oint_{\partial\Delta} f\,dz=0$
     für alle $\Delta\subset K_{r}(z_{0})$ folgt, dass die Aussage von
     \todo{lemma 8/10.2.3} $\Rightarrow$ wie in \todo{Satz 9/10.2.3}
     existiert eine Stammfunktion $F$ auf $K_{r}(z_{0})$, d.\,h. $F'=f$.
@@ -5246,7 +5251,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
   <\abs{z-z_{0}}<R\}$ (\highl{Kreisring}) $g:K\rightarrow \C$ holomorph.
   Dann gilt für alle $r_{1},r_{2}$ mit $r<r_{1}<r_{2}<R$
   \begin{gather*}
-    I_{1} = \ointclockwise_{\abs{z-z_{0}}=r_{1}} g(z)\,dz = \ointclockwise_{\abs{z-z_{0}}=r_{2}}
+    I_{1} = \oint_{\abs{z-z_{0}}=r_{1}} g(z)\,dz = \oint_{\abs{z-z_{0}}=r_{2}}
        g(z)\,dz = I_{2}
   \end{gather*}
 
@@ -5266,8 +5271,8 @@ $\int_{\Gamma} f(z)\,dz =0$.
   <R\}, f:K\rightarrow \C$ holomorph. Dann gilt für $r< r_1< \lvert
   z-z_0 \rvert <r_2<R$:
   \begin{align*}
-    f(z) &= \frac{1}{2\pi i} \ointclockwise_{\lvert \zeta -z_0\rvert=r_1}
-    \frac{f(\zeta)}{\zeta-z} d\zeta &- \frac{1}{2\pi i} \ointclockwise_{\lvert
+    f(z) &= \frac{1}{2\pi i} \oint_{\lvert \zeta -z_0\rvert=r_1}
+    \frac{f(\zeta)}{\zeta-z} d\zeta &- \frac{1}{2\pi i} \oint_{\lvert
       \zeta -z_0\rvert=r_2} \frac{f(\zeta)}{\zeta-z} d\zeta\\
     &= f_2(z) &+ f_1(z)
   \end{align*}
@@ -5283,14 +5288,14 @@ $\int_{\Gamma} f(z)\,dz =0$.
     \end{gather*}
     Aus dem \autoref{lem:1031-1} folgt:
     \begin{align*}
-      \ointclockwise_{\lvert \zeta-z_0\rvert =r_1} g(\zeta)d\zeta &=
-      \ointclockwise_{\lvert \zeta-z_0\rvert =r_2} g(\zeta)d\zeta \\
-      &\Rightarrow \ointclockwise_{\lvert \zeta-z_0\rvert =r_1}
-      \frac{f(\zeta)}{\zeta-z} d\zeta -f(z) \underbrace{\ointclockwise_{\lvert
+      \oint_{\lvert \zeta-z_0\rvert =r_1} g(\zeta)d\zeta &=
+      \oint_{\lvert \zeta-z_0\rvert =r_2} g(\zeta)d\zeta \\
+      &\Rightarrow \oint_{\lvert \zeta-z_0\rvert =r_1}
+      \frac{f(\zeta)}{\zeta-z} d\zeta -f(z) \underbrace{\oint_{\lvert
         \zeta-z_0\rvert =r_1} \frac{d\zeta}{\zeta-z}}_{=0}\\
-      &= \ointclockwise_{\lvert \zeta-z_0\rvert =r_2} \frac{f(\zeta)}{\zeta-z}
-      d\zeta -f(z) \underbrace{\ointclockwise_{\lvert \zeta-z_0\rvert =r_2}
-        \frac{d\zeta}{\zeta-z}}_{= \ointclockwise_{\lvert\zeta-z\rvert =\delta}
+      &= \oint_{\lvert \zeta-z_0\rvert =r_2} \frac{f(\zeta)}{\zeta-z}
+      d\zeta -f(z) \underbrace{\oint_{\lvert \zeta-z_0\rvert =r_2}
+        \frac{d\zeta}{\zeta-z}}_{= \oint_{\lvert\zeta-z\rvert =\delta}
         \frac{d\zeta}{\zeta-z} = 2\pi i}
     \end{align*}
   \end{proof}
@@ -5306,7 +5311,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
     \highl{Laurentreihe}.
   \item Die Koeffizienten $(a_k)$ sind eindeutig bestimmt und es gilt:
     \[\forall k\in\Z, r<\rho<R: a_k= \frac{1}{2\pi i}
-    \ointclockwise_{\lvert \zeta-z_0\rvert=\rho}
+    \oint_{\lvert \zeta-z_0\rvert=\rho}
     \frac{f(\zeta)}{(\zeta - z_0)^{k+1}} d\zeta\]
   \item Der Hauptteil der Laurentreihe $f_1$ konvergiert absolut und
     gleichmäßig auf $\{z: \lvert z-z_0\rvert \geq r_1\}$ mit $r_1>r$
@@ -5321,10 +5326,10 @@ $\int_{\Gamma} f(z)\,dz =0$.
       angewendet und es folgt, $f(z)=f_2(z)+f_1(z)$. Nun kann das
       \autoref{lem:1024-5} angewendet werden und man hat:
       \begin{align*}
-        f_2(z) &= \frac{1}{2\pi i} \ointclockwise_{\lvert \zeta -
+        f_2(z) &= \frac{1}{2\pi i} \oint_{\lvert \zeta -
           z_0\rvert = r_2} \frac{f(\zeta)}{\zeta-z} d\zeta =
         \sum_{k=0}^\infty a_k (z-z_0)^k\\
-        a_k &= \frac{1}{2\pi i} \ointclockwise_{\lvert \zeta- z_0\rvert
+        a_k &= \frac{1}{2\pi i} \oint_{\lvert \zeta- z_0\rvert
           = r_2} \frac{f(\zeta)}{(\zeta-z)^{k+1}} d\zeta
       \end{align*}
     \item Wir betrachten nun $f_1(z)$ mit $\lvert z-z_0\rvert >r_1,
@@ -5336,10 +5341,10 @@ $\int_{\Gamma} f(z)\,dz =0$.
         \frac{1}{z-z_0} \frac{1}{1-\frac{\zeta-z_0}{z-z_0}}\\
         &= \sum_{k=0}^\infty \frac{(\zeta-z_0)^k}{(z-z_0)^{k+1}}\\
         &\Rightarrow f_1(z) \frac{1}{2\pi i} \sum_{k=0}^\infty \bigg(
-        \ointclockwise_{\lvert \zeta-z_0\rvert =r_1} f(\zeta)
+        \oint_{\lvert \zeta-z_0\rvert =r_1} f(\zeta)
         (\zeta-z_0)^k d\zeta\bigg)\frac{1}{(z-z_0)^{k+1}}\\
         &= \frac{1}{2\pi i} \sum_{k=-1}^{-\infty} \bigg(
-        \ointclockwise_{\lvert \zeta-z_0\rvert =r_1}
+        \oint_{\lvert \zeta-z_0\rvert =r_1}
         \frac{f(\zeta)}{(\zeta-z_0)^{k+1}} d\zeta\bigg) (z-z_0)^k
       \end{align*}
       Der Term $(z-z_0)^k$ kann als Potenzreihe für
@@ -5358,41 +5363,54 @@ $\int_{\Gamma} f(z)\,dz =0$.
       sind. Wir nehmen an, $f(z)= \sum_{k=0}^\infty b_k (z-z_0)^k +
       \sum_{k=-1}^{-\infty} b_k (z-z_0)^k$ auf $r<\lvert z-z_0 \rvert
       <R$. Sei $r<\rho<R$ und es folgt:
-      \[\ointclockwise_{\lvert z-z_0\rvert =\rho}
+      \[\oint_{\lvert z-z_0\rvert =\rho}
       \frac{f(z)}{(z-z_0)^{l+1}} dz= \sum_{k=-\infty}^\infty b_k
-      \ointclockwise_{\lvert z-z_0\rvert=\rho} (z-z_0)^{k-l-1} dz=
+      \oint_{\lvert z-z_0\rvert=\rho} (z-z_0)^{k-l-1} dz=
       2\pi ib_l\]
     \end{enumerate}
   \end{proof}
 \end{satz}
 
 \begin{bemerk}
-  Die Funktion 
+  Die Funktion
   \[f_1(z)= \sum_{k=-1}^{-\infty} a_k (z-z_0)^k= a_{-1}\frac{1}{z-z_0}
   + a_{-2}\frac{1}{(z-z_0)^2}+ \ldots\]
-  heißt Hauptteil und beschreibt die Singularität von $f$ bei
-  $z_0$. Insbesondere gilt für $a_{-1}: \ointclockwise_{\lvert
+  heißt \highl[Hauptteil\,d.\,Laurentreihe]{Hauptteil} und beschreibt die Singularität von $f$ bei
+  $z_0$. Insbesondere gilt für $a_{-1}: \oint_{\lvert
     z-z_0\rvert=\rho} f(z)dz=2\pi ia_{-1}$ und $a_{-1}$ heißt
-  \highl{Residuum\footnote{Schreibweise: $\Res(f,
-      z_0)$}} von $f$ in $z_0$.
+  \highl{Residuum}\footnote{Schreibweise: $\Res(f, z_0)$} von $f$ in $z_0$.
 \end{bemerk}
 
 \begin{bsp}
-  Die Funktion $f(z)=\frac{1}{1+z^2}$ ist holomorph in $\C\backslash \{i,-i\}$.
-  \begin{enumerate}[1.\,F{a}ll]
-  \item $z_0=0\wedge \lvert z \rvert <1$:\\
-    $\Rightarrow \frac{1}{1+z^2} =\sum_{k=0}^\infty (-z^2)^k
-    =\sum_{k=0}^\infty (-1)^k z^{2k}$
-  \item $z_0=0\wedge \lvert z\rvert >1$:\\
-    $\Rightarrow \frac{1}{1+z^2}= \frac{1}{z^2}
-    \frac{1}{1+\frac{1}{z^2}} = \frac{1}{z^2} \sum_{k=0}^\infty (-1)^k
-    z^{-2k} = \frac{1}{z^2}-\frac{1}{z^4}+ \frac{1}{z^6}-\ldots$
-  \item $z_0=i\wedge 0<\lvert z-i\rvert <2$:\\
-    $\Rightarrow \frac{1}{1+z^2}= \frac{1}{(z-i)(z+i)}= \frac{1}{2i}
-    \bigg(\frac{1}{z-i} -\frac{1}{z+i}\bigg)= \frac{1}{2i}
-    \bigg(\frac{1}{z-1} -\frac{1}{2i(1+\frac{z-i}{2i})}\bigg) = \frac{1}{2i}
-    \frac{1}{z-i} +\frac{1}{4} \sum_{k=0}^\infty i^k \frac{(z-i)^k}{2^k}$
-  \end{enumerate}
+  Gegeben sei eine Funktion $f(z)=\frac{1}{1+z^2}$, die holomorph in
+  $\C\setminus \{i,-i\}$ ist.
+  \begin{faelle}
+  \item Für $\abs{z}<1$ können wir die Funktion um $z_{0}=0$ mithilfe der
+    geometrischen Reihe als eine Potenzreihe darstellen:
+    \begin{gather*}
+      \frac{1}{1+z^2} =\sum_{k=0}^\infty (-z^2)^k
+         =\sum_{k=0}^\infty (-1)^k z^{2k}
+    \end{gather*}
+  \item Außerhalb des Einheitskreises ($\abs{z}>1$) um $z_0=0$ können wir
+    durch gekonntes Umstellen und Anwendung der geometrischen Reihe,
+    ebenfalls $f$ als Potenzreihe darstellen:
+    \begin{gather*}
+      \frac{1}{1+z^2}= \frac{1}{z^2}
+         \frac{1}{1+\frac{1}{z^2}} = \frac{1}{z^2} \sum_{k=0}^\infty (-1)^k
+         z^{-2k} = \frac{1}{z^2}-\frac{1}{z^4}+ \frac{1}{z^6}-\ldots
+    \end{gather*}
+    Die Laurententwicklung wäre also nur der Hauptteil.
+  \item \help{hier weiß ich erstmal nicht weiter. Fehlt hier die
+    Betrachtung von $z_{0}=-i$ noch? Haben wir dann den ersten Fall nicht
+    doppel? Jedenfalls passiert da unten eine Partialbruch} $z_0=i\wedge 0<\lvert z-i\rvert <2$:
+    \begin{align*}
+      \frac{1}{1+z^2}&= \frac{1}{(z-i)(z+i)}= \frac{1}{2i}
+         \Big(\frac{1}{z-i} -\frac{1}{z+i}\Big)\\
+      &= \frac{1}{2i}
+         \Big(\frac{1}{z-1} -\frac{1}{2i(1+\frac{z-i}{2i})}\Big) = \frac{1}{2i}
+         \frac{1}{z-i} +\frac{1}{4} \sum_{k=0}^\infty i^k \frac{(z-i)^k}{2^k}
+    \end{align*}
+  \end{faelle}
 \end{bsp}
 
 \subsection{Der Residuensatz}
@@ -5404,12 +5422,12 @@ $\int_{\Gamma} f(z)\,dz =0$.
 \end{defini}
 
 \begin{folger}
-  Sei $f$ holomorph in $K(z_0, r,R)\Rightarrow \ointclockwise_{\lvert
+  Sei $f$ holomorph in $K(z_0, r,R)\Rightarrow \oint_{\lvert
     z-z_0\rvert =\rho} f(z)dz=2\pi i \Res(f,z_0)$.
 \end{folger}
 
 \begin{bsp}
-  $\ointclockwise_{\lvert z-i\rvert=1} \frac{dz}{1+z^2}=2\pi
+  $\oint_{\lvert z-i\rvert=1} \frac{dz}{1+z^2}=2\pi
   i\frac{1}{2i}= \pi$
 \end{bsp}
 
@@ -5417,9 +5435,6 @@ $\int_{\Gamma} f(z)\,dz =0$.
 \clearpage
 \appendix
 \pdfbookmark[0]{Index}{index}
-% Behebt das Problem der vielen "`overfull \hbox"' im Index
-% <news:3419172.ueajl5DJLB@mjk.komascript.de>
-\setlength{\parfillskip}{0pt plus 1fil}
 \printindex
 
 \end{document}
